# MLOpsDemo

./: Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
.github/workflows/: IaC.yml  acr.yml  cleanup.yml  functionapp.yml
model/: model.pkl
src/: app.py
