[tool.poetry]
name = "model-deploy"
version = "0.1.0"
description = "Deploying a scikit-learn model for MLOps demo"
authors = ["xdastile <xdastile12@gmail.com>"]
readme = "README.md"
packages = [{include = "model_deploy"}]

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "^1.3.0"
pandas = "^2.0.3"
uvicorn = "^0.23.1"
fastapi = "^0.100.1"
requests = "^2.31.0"
pydantic = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
