[tool.poetry]
name = "api"
version = "0.1.0"
description = "A scikit-learn model that predicts applicants behaviour"
authors = ["xdastile <xdastile12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "^1.3.0"
fastapi = "^0.100.0"
requests = "^2.31.0"
pydantic = "^2.0.3"
uvicorn = "^0.23.1"
pandas = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
